Вынесла сообщения в константы в AverageSleepDurationFunction.java, TotalSessionsCountFunction.java, MinSleepDurationFunction.java, MaxSleepDurationFunction.java, BadQualitySleepCountFunction.java, SleeplessNightsCountFunction.java; добавила проверку на null взодящего списка, убрала лишнее ограничение по noon в ChronotypeFunction.java